fix background repeat on mobile field grid

--- a/src/styles/fields.less
+++ b/src/styles/fields.less
@@ -88,6 +88,7 @@
 }
 /* field sort in grid */
 .qolFieldGrid .field {
+  background-size: cover;
   min-height: 345px;
   display: flex!important;
   flex-flow: row wrap;
@@ -103,7 +104,7 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    
+
     >img {
       max-width: 75px;
       max-height: 70px;
